[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/gilbert_assets/gilbert_idle/gilbert_idle01.png" type="Texture" id=1]
[ext_resource path="res://assets/gilbert_assets/gilbert_idle/gilbert_idle04.png" type="Texture" id=2]
[ext_resource path="res://assets/gilbert_assets/gilbert_idle/gilbert_idle06.png" type="Texture" id=3]
[ext_resource path="res://assets/gilbert_assets/gilbert_idle/gilbert_idle02.png" type="Texture" id=4]
[ext_resource path="res://assets/gilbert_assets/gilbert_idle/gilbert_idle03.png" type="Texture" id=5]
[ext_resource path="res://assets/gilbert_assets/gilbert_idle/gilbert_idle00.png" type="Texture" id=6]
[ext_resource path="res://assets/gilbert_assets/gilbert_idle/gilbert_idle05.png" type="Texture" id=7]
[ext_resource path="res://assets/gilbert_assets/gilbert_idle/gilbert_idle07.png" type="Texture" id=8]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run10.png" type="Texture" id=9]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run04.png" type="Texture" id=10]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run06.png" type="Texture" id=11]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run00.png" type="Texture" id=12]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run02.png" type="Texture" id=13]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run07.png" type="Texture" id=14]
[ext_resource path="res://source/Characters/Gilbert.gd" type="Script" id=15]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run09.png" type="Texture" id=16]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run05.png" type="Texture" id=17]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run01.png" type="Texture" id=18]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run08.png" type="Texture" id=19]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run11.png" type="Texture" id=20]
[ext_resource path="res://assets/gilbert_assets/gilbert_running/gilbert_run03.png" type="Texture" id=21]
[ext_resource path="res://assets/gilbert_assets/gilbert_idle/gilbert_opadanie02.png" type="Texture" id=22]
[ext_resource path="res://assets/gilbert_assets/gilbert_idle/gilbert_opadanie00.png" type="Texture" id=23]
[ext_resource path="res://assets/gilbert_assets/gilbert_idle/gilbert_opadanie01.png" type="Texture" id=24]
[ext_resource path="res://assets/gilbert_assets/gilbert_rising/gilbert_rising00.png" type="Texture" id=25]
[ext_resource path="res://assets/gilbert_assets/gilbert_rising/gilbert_rising02.png" type="Texture" id=26]
[ext_resource path="res://assets/gilbert_assets/gilbert_rising/gilbert_rising01.png" type="Texture" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 27 ), ExtResource( 26 ) ],
"loop": true,
"name": "Rising",
"speed": 8.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 22 ) ],
"loop": true,
"name": "Falling",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 21 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 9 ), ExtResource( 20 ) ],
"loop": true,
"name": "Running",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72.4228, 133.116 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48.4963, 79.274 )

[node name="Gilbert" type="KinematicBody2D"]
position = Vector2( 6.77017, -133.779 )
collision_mask = 8
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}
gravity = 4000.0
stomp_impulse = 1500.0

[node name="GilbertSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.63317, 1.54263 )
frames = SubResource( 1 )
animation = "Falling"
playing = true

[node name="GilbertCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0.70517, -0.619568 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DetectorCollision" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( -6.32867, 53.1624 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
